@@ -1,16 +1,13 @@
 package net.akashi.perk_weapons.Crossbows;
 
-import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.Lists;
-import com.google.common.collect.Multimap;
 import net.akashi.perk_weapons.Client.ClientHelper;
 import net.akashi.perk_weapons.Config.Properties.Crossbow.CrossbowProperties;
 import net.akashi.perk_weapons.Entities.Projectiles.Arrows.BaseArrow;
-import net.akashi.perk_weapons.Network.ArrowVelocitySyncPacket;
+import net.akashi.perk_weapons.Network.ArrowVelocitySyncPayload;
 import net.akashi.perk_weapons.Registry.ModEntities;
-import net.akashi.perk_weapons.Registry.ModPackets;
 import net.akashi.perk_weapons.Registry.ModTags;
-import net.akashi.perk_weapons.Util.EnchantmentValidator;
+import net.akashi.perk_weapons.Util.EnchantmentUtil;
 import net.akashi.perk_weapons.Util.IDoubleLineCrosshairItem;
 import net.akashi.perk_weapons.Util.SoundEventHolder;
 import net.akashi.perk_weapons.Util.TooltipHelper;
@@ -25,38 +22,45 @@ import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.stats.Stats;
 import net.minecraft.util.RandomSource;
+import net.minecraft.core.Holder;
+import net.minecraft.resources.ResourceKey;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.item.component.CustomData;
+import net.minecraft.world.item.component.ChargedProjectiles;
+import net.minecraft.core.component.DataComponents;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResultHolder;
 import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.EquipmentSlotGroup;
 import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.ai.attributes.Attribute;
 import net.minecraft.world.entity.ai.attributes.AttributeModifier;
 import net.minecraft.world.entity.ai.attributes.Attributes;
-import net.minecraft.world.entity.item.ItemEntity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.entity.projectile.AbstractArrow;
 import net.minecraft.world.entity.projectile.FireworkRocketEntity;
 import net.minecraft.world.entity.projectile.Projectile;
 import net.minecraft.world.item.*;
 import net.minecraft.world.item.enchantment.Enchantment;
+import net.minecraft.world.item.enchantment.Enchantments;
+import net.minecraft.world.item.component.ItemAttributeModifiers;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.Vec3;
-import net.minecraftforge.fml.loading.FMLEnvironment;
-import net.minecraftforge.network.PacketDistributor;
+import net.neoforged.fml.loading.FMLEnvironment;
+import net.neoforged.neoforge.network.PacketDistributor;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 import org.joml.Quaternionf;
 import org.joml.Vector3f;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 import java.util.function.Predicate;
 
-import static net.minecraft.world.item.enchantment.Enchantments.*;
-
 public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrosshairItem {
-	public static final UUID MOVEMENT_SPEED_UUID = UUID.fromString("DB3F25A3-255C-8F4A-B293-EA1BA59D27CE");
-	public static Predicate<ItemStack> SUPPORTED_PROJECTILE = (stack) -> stack.is(Items.ARROW);
-	public Multimap<Attribute, AttributeModifier> AttributeModifiers;
+	public static final ResourceLocation MOVEMENT_SPEED_ID = ResourceLocation.fromNamespaceAndPath("perk_weapons", "base_crossbow_movement_speed");
+	public static Predicate<ItemStack> SUPPORTED_PROJECTILE = stack -> stack.is(Items.ARROW);
+	public ItemAttributeModifiers DefaultAttributeModifiers = ItemAttributeModifiers.EMPTY;
 	public boolean ONLY_ALLOW_MAINHAND = false;
 	private static final String TAG_CHARGED = "Charged";
 	private static final String TAG_CHARGED_PROJECTILES = "ChargedProjectiles";
@@ -69,23 +73,23 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 	protected float QUICK_CHARGE_RELOAD_TIME_REDUCTION = 5;
 	protected float SPEED_MODIFIER = 0.0F;
 
-	protected final Set<Enchantment> GeneralEnchants = new HashSet<>(Set.of(
-			QUICK_CHARGE,
-			MULTISHOT,
-			PIERCING,
-			POWER_ARROWS,
-			MENDING,
-			UNBREAKING,
-			MOB_LOOTING
+	protected final Set<ResourceKey<Enchantment>> GeneralEnchants = new HashSet<>(Set.of(
+			Enchantments.QUICK_CHARGE,
+			Enchantments.MULTISHOT,
+			Enchantments.PIERCING,
+			Enchantments.POWER,
+			Enchantments.MENDING,
+			Enchantments.UNBREAKING,
+			Enchantments.LOOTING
 	));
 
-	protected final Set<Enchantment> ConflictEnchants = new HashSet<>();
-
+	protected final Set<ResourceKey<Enchantment>> ConflictEnchants = new HashSet<>();
 
 	public BaseCrossbowItem(Properties pProperties) {
 		super(pProperties);
-		if (FMLEnvironment.dist.isClient())
+		if (FMLEnvironment.dist.isClient()) {
 			ClientHelper.registerCrossbowPropertyOverrides(this);
+		}
 		buildAttributeModifiers();
 	}
 
@@ -93,9 +97,9 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 	 * To avoid a bug caused by the vanilla equipment update method, if speedModifier!=0, onlyAllowMainHand will be forced set true
 	 **/
 	public BaseCrossbowItem(int maxChargeTicks, float damage, float velocity,
-	                        float inaccuracy, int ammoCapacity, int fireInterval,
-	                        float speedModifier, boolean onlyAllowMainHand,
-	                        Properties pProperties) {
+						float inaccuracy, int ammoCapacity, int fireInterval,
+						float speedModifier, boolean onlyAllowMainHand,
+						Properties pProperties) {
 		super(pProperties);
 		this.MAX_CHARGE_TICKS = maxChargeTicks;
 		this.DAMAGE = damage;
@@ -106,8 +110,9 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 		this.ONLY_ALLOW_MAINHAND = onlyAllowMainHand;
 		this.SPEED_MODIFIER = speedModifier;
 		buildAttributeModifiers();
-		if (FMLEnvironment.dist.isClient())
+		if (FMLEnvironment.dist.isClient()) {
 			ClientHelper.registerCrossbowPropertyOverrides(this);
+		}
 	}
 
 	//General overrides
@@ -145,14 +150,14 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 		if (!level.isClientSide()) {
 			SoundEventHolder startSoundEvent = this.getStartSound(livingEntity, crossbowStack);
 			SoundEventHolder middleSoundEvent = this.getMiddleSound(livingEntity, crossbowStack);
-			byte progress = getChargeProgressFrom0To10(livingEntity, crossbowStack);
+			float progress = getChargeProgress(livingEntity, crossbowStack);
 
-			if (progress == (byte) (getMaxChargeTicks(crossbowStack) * 0.1) && startSoundEvent.soundEvent != null) {
+			if (progress >= 0.1F && progress < 0.12F && startSoundEvent.soundEvent != null) {
 				level.playSound(null, livingEntity, startSoundEvent.soundEvent, SoundSource.PLAYERS,
 						startSoundEvent.volume, startSoundEvent.pitch);
 			}
 
-			if (progress == (byte) (getMaxChargeTicks(crossbowStack) * 0.6) && middleSoundEvent.soundEvent != null) {
+			if (progress >= 0.6F && progress < 0.62F && middleSoundEvent.soundEvent != null) {
 				level.playSound(null, livingEntity, middleSoundEvent.soundEvent, SoundSource.PLAYERS,
 						middleSoundEvent.volume, middleSoundEvent.pitch);
 			}
@@ -184,66 +189,41 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 			}
 		}
 	}
-
-	@Override
-	public boolean onEntitySwing(ItemStack stack, LivingEntity entity) {
-		if (!entity.level().isClientSide() && entity instanceof Player player && player.isCrouching()) {
-			List<ItemStack> ammoStackList = getChargedProjectiles(stack);
-			Level level = player.level();
-			for (ItemStack ammoStack : ammoStackList) {
-				if (!player.addItem(ammoStack))
-					level.addFreshEntity(new ItemEntity(level, player.getX(), player.getY(), player.getZ(), ammoStack));
-			}
-			clearChargedProjectiles(stack);
-			setCrossbowCharged(stack, false);
-		}
-		return super.onEntitySwing(stack, entity);
-	}
-
-	@Override
 	public @NotNull UseAnim getUseAnimation(@NotNull ItemStack pStack) {
 		return UseAnim.CROSSBOW;
 	}
 
 	@Override
-	public int getUseDuration(@NotNull ItemStack pStack) {
+	public int getUseDuration(@NotNull ItemStack pStack, @NotNull LivingEntity pEntity) {
 		return 72000;
 	}
 
-	@Override
-	public @NotNull Predicate<ItemStack> getSupportedHeldProjectiles() {
-		return BaseCrossbowItem.SUPPORTED_PROJECTILE;
-	}
-
-	@Override
 	public @NotNull Predicate<ItemStack> getAllSupportedProjectiles() {
 		return BaseCrossbowItem.SUPPORTED_PROJECTILE;
 	}
 
-	@Override
-	public boolean shouldCauseReequipAnimation(ItemStack oldStack, ItemStack newStack, boolean slotChanged) {
+	public boolean shouldCauseReequipAnimation(@NotNull ItemStack oldStack, @NotNull ItemStack newStack, boolean slotChanged) {
 		return slotChanged || !newStack.is(oldStack.getItem());
 	}
 
-	@Override
 	public float getChokeProgress(LivingEntity shooter, ItemStack stack) {
 		return isCrossbowCharged(stack) ? 1.0f : getChargeProgress(shooter, stack);
 	}
 
 	@Override
-	public Multimap<Attribute, AttributeModifier> getAttributeModifiers(EquipmentSlot slot, ItemStack stack) {
-		return slot == EquipmentSlot.MAINHAND ? AttributeModifiers : ImmutableMultimap.of();
+	public @NotNull ItemAttributeModifiers getDefaultAttributeModifiers(@NotNull ItemStack stack) {
+		return this.DefaultAttributeModifiers;
 	}
 
 	//Weapon mechanic logics
 	protected void shoot(Level level, LivingEntity shooter, InteractionHand hand, ItemStack crossbowStack,
 	                     float damage, float velocity, float inaccuracy) {
-		if (shooter instanceof Player player && net.minecraftforge.event.ForgeEventFactory.onArrowLoose(crossbowStack,
+		if (shooter instanceof Player player && net.neoforged.neoforge.event.EventHooks.onArrowLoose(crossbowStack,
 				shooter.level(), player, 1, true) < 0) return;
 
-		int multiShotLevel = getCrossbowEnchantmentLevel(crossbowStack, MULTISHOT);
-		int pierceLevel = getCrossbowEnchantmentLevel(crossbowStack, PIERCING);
-		int powerLevel = getCrossbowEnchantmentLevel(crossbowStack, POWER_ARROWS);
+		int multiShotLevel = getCrossbowEnchantmentLevel(crossbowStack, Enchantments.MULTISHOT);
+		int pierceLevel = getCrossbowEnchantmentLevel(crossbowStack, Enchantments.PIERCING);
+		int powerLevel = getCrossbowEnchantmentLevel(crossbowStack, Enchantments.POWER);
 
 		int shotAmount = multiShotLevel * 2 + 1;
 		int angle = multiShotLevel * -10;
@@ -282,18 +262,18 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 		}
 		ItemStack ammoToLoad = ammoStack.copyWithCount(1);
 
-		if (isShooterPlayer && !isCreative && getCrossbowEnchantmentLevel(crossbowStack, INFINITY_ARROWS) == 0) {
-			ammoStack.shrink(1);
-			if (ammoStack.isEmpty())
-				((Player) shooter).getInventory().removeItem(ammoStack);
-		}
+			if (isShooterPlayer && !isCreative && getCrossbowEnchantmentLevel(crossbowStack, Enchantments.INFINITY) == 0) {
+				ammoStack.shrink(1);
+				if (ammoStack.isEmpty())
+					((Player) shooter).getInventory().removeItem(ammoStack);
+			}
 
-		addChargedProjectile(crossbowStack, ammoToLoad);
+		addChargedProjectile(shooter.level(), crossbowStack, ammoToLoad);
 		return true;
 	}
 
 	public int getMaxChargeTicks(ItemStack crossbowStack) {
-		int quickChargeLevel = getCrossbowEnchantmentLevel(crossbowStack, QUICK_CHARGE);
+		int quickChargeLevel = getCrossbowEnchantmentLevel(crossbowStack, Enchantments.QUICK_CHARGE);
 		return Math.max(1, (int) Math.ceil(MAX_CHARGE_TICKS - QUICK_CHARGE_RELOAD_TIME_REDUCTION * quickChargeLevel)
 		);
 	}
@@ -321,7 +301,9 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 
 			arrow.setBaseDamage(damage / velocity);
 			if (pierceLevel > 0) {
-				arrow.setPierceLevel(pierceLevel);
+				if (projectile instanceof net.akashi.perk_weapons.Entities.Projectiles.Arrows.BaseArrow baseArrow) {
+					baseArrow.setPierceLevel(pierceLevel);
+				}
 			}
 
 		} else {
@@ -336,12 +318,15 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 		projectile.shoot(vector3f.x(), vector3f.y(), vector3f.z(), velocity, inaccuracy);
 
 
-		crossbowStack.hurtAndBreak(durabilityCost, shooter, (entity) -> entity.broadcastBreakEvent(hand));
+			crossbowStack.hurtAndBreak(durabilityCost, shooter, hand == InteractionHand.MAIN_HAND ? EquipmentSlot.MAINHAND : EquipmentSlot.OFFHAND);
 		level.addFreshEntity(projectile);
 
 		//Sync velocity to all clients
-		ModPackets.NETWORK.send(PacketDistributor.ALL.noArg(),
-				new ArrowVelocitySyncPacket(projectile.getDeltaMovement(), projectile.getId()));
+		PacketDistributor.sendToAllPlayers(new ArrowVelocitySyncPayload(
+				projectile.getDeltaMovement().x,
+				projectile.getDeltaMovement().y,
+				projectile.getDeltaMovement().z,
+				projectile.getId()));
 
 		SoundEventHolder shootSound = getShootSound(shooter, crossbowStack);
 		if (shootSound.soundEvent != null) {
@@ -352,7 +337,7 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 
 	protected Projectile getProjectile(Level level, LivingEntity shooter, ItemStack crossbowStack) {
 		BaseCrossbowItem crossbowItem = (BaseCrossbowItem) crossbowStack.getItem();
-		ItemStack ammoStack = crossbowItem.getLastChargedProjectile(crossbowStack);
+		ItemStack ammoStack = crossbowItem.getLastChargedProjectile(level, crossbowStack);
 
 		if (ammoStack.is(Items.FIREWORK_ROCKET)) {
 			return new FireworkRocketEntity(level, ammoStack, shooter, shooter.getX(),
@@ -369,81 +354,85 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 		return arrow;
 	}
 
-	public void addChargedProjectile(ItemStack crossbowStack, ItemStack ammoStack) {
-		CompoundTag compoundtag = crossbowStack.getOrCreateTag();
-		ListTag listtag;
-		if (compoundtag.contains(TAG_CHARGED_PROJECTILES, 9)) {
-			listtag = compoundtag.getList(TAG_CHARGED_PROJECTILES, 10);
-		} else {
-			listtag = new ListTag();
-		}
-
-		CompoundTag ammoTag = new CompoundTag();
-		ammoStack.save(ammoTag);
-		listtag.add(ammoTag);
-		compoundtag.put(TAG_CHARGED_PROJECTILES, listtag);
+	public void addChargedProjectile(Level level, ItemStack crossbowStack, ItemStack ammoStack) {
+		List<ItemStack> charged = new ArrayList<>(crossbowStack.getOrDefault(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY).getItems());
+		charged.add(ammoStack.copy());
+		crossbowStack.set(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.of(charged));
 	}
 
-	public List<ItemStack> getChargedProjectiles(ItemStack crossbowStack) {
-		List<ItemStack> list = Lists.newArrayList();
+	public List<ItemStack> getChargedProjectiles(Level level, ItemStack crossbowStack) {
+		List<ItemStack> charged = Lists.newArrayList(crossbowStack.getOrDefault(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY).getItems());
+		if (!charged.isEmpty() || level == null) {
+			return charged;
+		}
+
 		ListTag listtag = getChargedProjectileListTag(crossbowStack);
 		for (int i = 0; i < listtag.size(); ++i) {
 			CompoundTag ammoTag = listtag.getCompound(i);
-			list.add(ItemStack.of(ammoTag));
+			charged.add(ItemStack.parseOptional(level.registryAccess(), ammoTag));
 		}
-		return list;
+		return charged;
 	}
 
 	public ListTag getChargedProjectileListTag(ItemStack crossbowStack) {
-		CompoundTag compoundtag = crossbowStack.getOrCreateTag();
-		ListTag listtag;
-		if (compoundtag.contains(TAG_CHARGED_PROJECTILES, 9)) {
-			listtag = compoundtag.getList(TAG_CHARGED_PROJECTILES, 10);
-		} else {
-			listtag = new ListTag();
-		}
-		return listtag;
+		CompoundTag compoundtag = crossbowStack.getOrDefault(DataComponents.CUSTOM_DATA, CustomData.EMPTY).copyTag();
+		return compoundtag.contains(TAG_CHARGED_PROJECTILES, 9) ? compoundtag.getList(TAG_CHARGED_PROJECTILES, 10) : new ListTag();
 	}
 
 	public int getChargedProjectileAmount(ItemStack crossbowStack) {
-		return getChargedProjectileListTag(crossbowStack).size();
+		ChargedProjectiles charged = crossbowStack.getOrDefault(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY);
+		return !charged.isEmpty() ? charged.getItems().size() : getChargedProjectileListTag(crossbowStack).size();
 	}
 
-	public ItemStack getLastChargedProjectile(ItemStack crossbowStack) {
-		List<ItemStack> ammoList = getChargedProjectiles(crossbowStack);
+	public ItemStack getLastChargedProjectile(Level level, ItemStack crossbowStack) {
+		List<ItemStack> ammoList = getChargedProjectiles(level, crossbowStack);
 		int size = ammoList.size();
-		return size > 0 ? ammoList.get(ammoList.size() - 1) : ItemStack.EMPTY;
+		return size > 0 ? ammoList.getLast() : ItemStack.EMPTY;
 	}
 
 	public void clearChargedProjectiles(ItemStack crossbowStack) {
-		CompoundTag compoundtag = crossbowStack.getOrCreateTag();
-		ListTag listtag = compoundtag.getList(TAG_CHARGED_PROJECTILES, 9);
-		listtag.clear();
-		compoundtag.put(TAG_CHARGED_PROJECTILES, listtag);
+		crossbowStack.set(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY);
+		CustomData.update(DataComponents.CUSTOM_DATA, crossbowStack, tag -> tag.putBoolean(TAG_CHARGED, false));
 	}
 
 	public void consumeAndSetCharged(LivingEntity shooter, ItemStack crossbowStack) {
-		ListTag listtag = getChargedProjectileListTag(crossbowStack);
-		if (!listtag.isEmpty())
-			listtag.remove(listtag.size() - 1);
-		if (listtag.isEmpty()) {
-			setCrossbowCharged(crossbowStack, false);
+		List<ItemStack> charged = new ArrayList<>(crossbowStack.getOrDefault(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY).getItems());
+		if (!charged.isEmpty()) {
+			charged.removeLast();
+			crossbowStack.set(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.of(charged));
 		}
+		setCrossbowCharged(crossbowStack, !charged.isEmpty());
 	}
 
 	public boolean isCrossbowCharged(ItemStack crossbowStack) {
-		CompoundTag tag = crossbowStack.getOrCreateTag();
-		return tag.contains(TAG_CHARGED) && tag.getBoolean(TAG_CHARGED);
+		CompoundTag tag = crossbowStack.getOrDefault(DataComponents.CUSTOM_DATA, CustomData.EMPTY).copyTag();
+		if (tag.contains(TAG_CHARGED) && tag.getBoolean(TAG_CHARGED)) {
+			return true;
+		}
+		if (this instanceof AutoLoadingCrossbowItem) {
+			return false;
+		}
+		ChargedProjectiles projectiles = crossbowStack.getOrDefault(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY);
+		return !projectiles.isEmpty();
 	}
 
 	public void setCrossbowCharged(ItemStack crossbowStack, boolean charged) {
-		CompoundTag tag = crossbowStack.getOrCreateTag();
-		tag.putBoolean(TAG_CHARGED, charged);
+		CustomData.update(DataComponents.CUSTOM_DATA, crossbowStack, tag -> tag.putBoolean(TAG_CHARGED, charged));
+		if (!charged) {
+			crossbowStack.set(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY);
+		}
 	}
 
 	public boolean isFireworkCharged(ItemStack crossbowStack) {
+		ChargedProjectiles charged = crossbowStack.getOrDefault(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY);
+		if (!charged.isEmpty()) {
+			List<ItemStack> items = charged.getItems();
+			return !items.isEmpty() && items.getLast().is(Items.FIREWORK_ROCKET);
+		}
+
 		if (crossbowStack.getItem() instanceof BaseCrossbowItem crossbowItem) {
-			return crossbowItem.getLastChargedProjectile(crossbowStack).is(Items.FIREWORK_ROCKET);
+			ListTag listtag = crossbowItem.getChargedProjectileListTag(crossbowStack);
+			return !listtag.isEmpty() && listtag.getCompound(listtag.size() - 1).getString("id").contains("firework_rocket");
 		}
 		return false;
 	}
@@ -470,7 +459,7 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 
 	@NotNull
 	protected SoundEventHolder getStartSound(LivingEntity shooter, ItemStack crossbowStack) {
-		return switch (crossbowStack.getEnchantmentLevel(QUICK_CHARGE)) {
+		return switch (getCrossbowEnchantmentLevel(crossbowStack, Enchantments.QUICK_CHARGE)) {
 			case 1 -> new SoundEventHolder(SoundEvents.CROSSBOW_QUICK_CHARGE_1, 0.5F, 1F);
 			case 2 -> new SoundEventHolder(SoundEvents.CROSSBOW_QUICK_CHARGE_2, 0.5F, 1F);
 			case 3 -> new SoundEventHolder(SoundEvents.CROSSBOW_QUICK_CHARGE_3, 0.5F, 1F);
@@ -519,66 +508,95 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 
 	protected void buildAttributeModifiers() {
 		if (SPEED_MODIFIER != 0.0F) {
-			ImmutableMultimap.Builder<Attribute, AttributeModifier> builder = ImmutableMultimap.builder();
-			builder.put(Attributes.MOVEMENT_SPEED, new AttributeModifier(MOVEMENT_SPEED_UUID,
-					"Tool modifier", SPEED_MODIFIER, AttributeModifier.Operation.MULTIPLY_TOTAL));
+			ItemAttributeModifiers.Builder defaultBuilder = ItemAttributeModifiers.builder();
+			AttributeModifier speedModifier = new AttributeModifier(MOVEMENT_SPEED_ID,
+					SPEED_MODIFIER, AttributeModifier.Operation.ADD_MULTIPLIED_TOTAL);
+			defaultBuilder.add(Attributes.MOVEMENT_SPEED, speedModifier, EquipmentSlotGroup.MAINHAND);
 			this.ONLY_ALLOW_MAINHAND = true;
-			this.AttributeModifiers = builder.build();
+			this.DefaultAttributeModifiers = defaultBuilder.build();
 		} else {
-			this.AttributeModifiers = ImmutableMultimap.of();
+			this.DefaultAttributeModifiers = ItemAttributeModifiers.EMPTY;
 		}
 	}
 
 	//Enchantment related
-	public boolean AddGeneralEnchant(Enchantment enchantment) {
+	public boolean AddGeneralEnchant(Holder<Enchantment> enchantment) {
+		if (enchantment == null) {
+			return false;
+		}
+		return enchantment.unwrapKey().map(GeneralEnchants::add).orElse(false);
+	}
+
+	public boolean AddGeneralEnchant(ResourceKey<Enchantment> enchantment) {
 		return GeneralEnchants.add(enchantment);
 	}
 
-	public boolean RemoveGeneralEnchant(Enchantment enchantment) {
+	public boolean RemoveGeneralEnchant(Holder<Enchantment> enchantment) {
+		if (enchantment == null) {
+			return false;
+		}
+		return enchantment.unwrapKey().map(GeneralEnchants::remove).orElse(false);
+	}
+
+	public boolean RemoveGeneralEnchant(ResourceKey<Enchantment> enchantment) {
 		return GeneralEnchants.remove(enchantment);
 	}
 
-	public boolean AddConflictEnchant(Enchantment enchantment) {
+	public boolean AddConflictEnchant(Holder<Enchantment> enchantment) {
+		if (enchantment == null) {
+			return false;
+		}
+		return enchantment.unwrapKey().map(ConflictEnchants::add).orElse(false);
+	}
+
+	public boolean AddConflictEnchant(ResourceKey<Enchantment> enchantment) {
 		return ConflictEnchants.add(enchantment);
 	}
 
-	public boolean RemoveConflictEnchant(Enchantment enchantment) {
+	public boolean RemoveConflictEnchant(Holder<Enchantment> enchantment) {
+		if (enchantment == null) {
+			return false;
+		}
+		return enchantment.unwrapKey().map(ConflictEnchants::remove).orElse(false);
+	}
+
+	public boolean RemoveConflictEnchant(ResourceKey<Enchantment> enchantment) {
 		return ConflictEnchants.remove(enchantment);
 	}
 
-	public int getCrossbowEnchantmentLevel(ItemStack stack, Enchantment enchantment) {
-		return stack.getEnchantmentLevel(enchantment);
+	public int getCrossbowEnchantmentLevel(ItemStack stack, Holder<Enchantment> enchantment) {
+		return EnchantmentUtil.getLevel(stack, enchantment);
+	}
+
+	public int getCrossbowEnchantmentLevel(ItemStack stack, ResourceKey<Enchantment> enchantment) {
+		return EnchantmentUtil.getLevel(stack, enchantment);
 	}
 
 	@Override
-	public boolean canApplyAtEnchantingTable(ItemStack stack, Enchantment enchantment) {
-		return EnchantmentValidator.canApplyAtTable(enchantment, GeneralEnchants, ConflictEnchants);
+	public boolean supportsEnchantment(@NotNull ItemStack stack, @NotNull Holder<Enchantment> enchantment) {
+		return EnchantmentUtil.supportsEnchantment(stack, enchantment, GeneralEnchants, ConflictEnchants);
 	}
 
-	@Override
-	public boolean isBookEnchantable(ItemStack stack, ItemStack book) {
-		return EnchantmentValidator.canBookEnchant(stack, book, ConflictEnchants);
+	public boolean isBookEnchantable(@NotNull ItemStack stack, @NotNull ItemStack book) {
+		return EnchantmentUtil.canBookEnchant(stack, book, GeneralEnchants, ConflictEnchants);
 	}
 
 	//Tooltip descriptions
 
 	@Override
-	public void appendHoverText(@NotNull ItemStack stack, @Nullable Level level, @NotNull List<Component> tooltip,
+	public void appendHoverText(@NotNull ItemStack stack, @NotNull Item.TooltipContext context, @NotNull List<Component> tooltip,
 	                            @NotNull TooltipFlag isAdvanced) {
-		if (level == null || !level.isClientSide()) {
-			super.appendHoverText(stack, level, tooltip, isAdvanced);
-			return;
-		}
+		super.appendHoverText(stack, context, tooltip, isAdvanced);
 
 		if (ONLY_ALLOW_MAINHAND) {
 			tooltip.add(Component.translatable("tooltip.perk_weapons.only_mainhand")
 					.withStyle(ChatFormatting.RED));
 		}
 
-		TooltipHelper.addWeaponDescription(tooltip, getWeaponDescription(stack, level));
-		TooltipHelper.addPerkDescription(tooltip, getPerkDescriptions(stack, level));
+		TooltipHelper.addWeaponDescription(tooltip, getWeaponDescription(stack, null));
+		TooltipHelper.addPerkDescription(tooltip, getPerkDescriptions(stack, null));
 
-		int powerLevel = getCrossbowEnchantmentLevel(stack, POWER_ARROWS);
+		int powerLevel = getCrossbowEnchantmentLevel(stack, Enchantments.POWER);
 		float damage = (float) (DAMAGE * (powerLevel > 0 ? 1 + 0.25 * powerLevel : 1));
 		tooltip.add(Component.translatable("tooltip.perk_weapons.attribute_damage",
 						TooltipHelper.convertToEmbeddedElement(damage))
@@ -596,14 +614,14 @@ public class BaseCrossbowItem extends CrossbowItem implements IDoubleLineCrossha
 						FIRE_INTERVAL))).withStyle(ChatFormatting.DARK_AQUA));
 		tooltip.add(Component.empty());
 
-		ItemStack ammoStack = getLastChargedProjectile(stack);
+		ItemStack ammoStack = getLastChargedProjectile(null, stack);
 		if (isCrossbowCharged(stack) && !ammoStack.isEmpty()) {
 			Component ammo = ammoStack.getDisplayName().copy().withStyle(ChatFormatting.GRAY);
 			tooltip.add(Component.translatable("tooltip.perk_weapons.crossbow_projectile", ammo)
 					.withStyle(ChatFormatting.DARK_AQUA));
 			if (isAdvanced.isAdvanced() && ammoStack.is(Items.FIREWORK_ROCKET)) {
 				List<Component> list1 = Lists.newArrayList();
-				Items.FIREWORK_ROCKET.appendHoverText(ammoStack, level, list1, isAdvanced);
+				Items.FIREWORK_ROCKET.appendHoverText(ammoStack, context, list1, isAdvanced);
 				if (!list1.isEmpty()) {
 					list1.replaceAll(pSibling -> Component.literal("  ")
 							.append(pSibling).withStyle(ChatFormatting.GRAY));
